gap solved-1

--- a/src/Components/Eggsection.css
+++ b/src/Components/Eggsection.css
@@ -131,4 +131,7 @@
     font-weight: 900;
     font-size: 2rem;
   }
+  .section__egg {
+    margin-top: -4px;
+  }
 }
